objects/Car_Accessory__c.object
<CustomObject>
    <fields>
        <fullName>CarId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Car Accessories</relationshipLabel>
        <relationshipName>Car_Accessories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Accessory_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Car Accessory Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Car Accessory</label>
    <nameField>
        <label>Car Accessory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Accessories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>